// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/useFormattedInput BackspaceAtSeparator play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:rn:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rl:"
    >
      Test Backspace
    </label>
    <input id="textFieldTextboxId-:rl:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-organisationNumber"
           data-variant="medium"
           autocomplete="off"
           value="124&nbsp;567&nbsp;89"
    >
    <div id="textFieldErrorId-:rk:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput BankAccountNumberFormatting play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:rf:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rd:"
    >
      Kontonummer
    </label>
    <input id="textFieldTextboxId-:rd:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-bankAccountNumber"
           data-variant="medium"
           autocomplete="off"
           value="1234&nbsp;12&nbsp;12345"
    >
    <div id="textFieldErrorId-:rc:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput DeleteAtSeparator play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:rr:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rp:"
    >
      Test Delete
    </label>
    <input id="textFieldTextboxId-:rp:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-organisationNumber"
           data-variant="medium"
           autocomplete="off"
           value="123&nbsp;567&nbsp;89"
    >
    <div id="textFieldErrorId-:ro:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput MaxLengthValidation play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rh:"
    >
      Telefonnummer (max 8 digits)
    </label>
    <input id="textFieldTextboxId-:rh:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-phoneNumber"
           data-variant="medium"
           autocomplete="off"
           value="12&nbsp;34&nbsp;56&nbsp;78"
    >
    <div id="textFieldErrorId-:rg:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput NationalIdentityNumberFormatting play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:rb:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r9:"
    >
      Fødselsnummer
    </label>
    <input id="textFieldTextboxId-:r9:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-nationalIdentityNumber"
           data-variant="medium"
           autocomplete="off"
           value="123456&nbsp;12345"
    >
    <div id="textFieldErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput NonDigitFilteringInput play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rt:"
    >
      Test Non-Digit Filtering
    </label>
    <input id="textFieldTextboxId-:rt:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-phoneNumber"
           data-variant="medium"
           autocomplete="off"
           value="12&nbsp;34&nbsp;56&nbsp;78"
    >
    <div id="textFieldErrorId-:rs:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput OrganisationNumberFormatting play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:r7:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r5:"
    >
      Organisasjonsnummer
    </label>
    <input id="textFieldTextboxId-:r5:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-organisationNumber"
           data-variant="medium"
           autocomplete="off"
           value="123&nbsp;456&nbsp;789"
    >
    <div id="textFieldErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput PhoneNumberFormatting play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:r3:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1:"
    >
      Telefonnummer
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-testid="formatted-input-phoneNumber"
           data-variant="medium"
           autocomplete="off"
           value="87&nbsp;65&nbsp;43&nbsp;21"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/useFormattedInput RawValueExtraction play-test 1`] = `
<div data-test-block="true">
  <div class="_wrapper_1dg5q_1">
    <label id="labelId-:r13:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r11:"
    >
      Organisasjonsnummer
    </label>
    <input id="textFieldTextboxId-:r11:"
           class="_textbox_1dg5q_5 $ _textboxMarginTop_1dg5q_24"
           data-variant="medium"
           autocomplete="off"
           value="987&nbsp;654&nbsp;321"
    >
    <div id="textFieldErrorId-:r10:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <div data-testid="raw-value">
    Raw: 987654321
  </div>
</div>
`;
